Initial configuration changes
Moved Context to conf package. Added config stubs.

--- a/flume-ng-core/pom.xml
+++ b/flume-ng-core/pom.xml
@@ -107,12 +107,13 @@ limitations under the License.
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
     </dependency>
-
+<dependency>
+<groupId>org.apache.flume</groupId>
+<artifactId>flume-ng-configuration</artifactId>
+</dependency>
     <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro-ipc</artifactId>
-    </dependency>
-
-  </dependencies>
-
+</dependency>
+</dependencies>
 </project>
