--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@ limitations under the License.
   </properties>
 
   <modules>
+    <module>flume-ng-configuration</module>
     <module>flume-ng-core</module>
     <module>flume-ng-sinks</module>
     <module>flume-ng-node</module>
@@ -596,6 +597,11 @@ limitations under the License.
 
       <!-- internal module dependencies -->
 
+      <dependency>
+        <groupId>org.apache.flume</groupId>
+        <artifactId>flume-ng-configuration</artifactId>
+        <version>1.1.0-incubating-SNAPSHOT</version>
+      </dependency>
       <dependency>
         <groupId>org.apache.flume</groupId>
         <artifactId>flume-ng-core</artifactId>
