--- a/pom.xml
+++ b/pom.xml
@@ -735,6 +735,7 @@ limitations under the License.
                   <exclude>**/.classpath</exclude>
                   <exclude>**/.project</exclude>
                   <exclude>**/target/**</exclude>
+		  <exclude>.travis.yml</exclude>
                 </excludes>
               </configuration>
             </execution>
