--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
   - oraclejdk7
 install: cd flume-ng-sdk;mvn clean install -DskipTests;cd ../flume-ng-core;mvn clean install -DskipTests;cd ../flume-ng-sinks/flume-ng-kafka-sink;mvn clean install -DskipTests
-script: cd flume-ng-channels/flume-kafka-channel;./run-kafkatest
+script: cd ../../flume-ng-channels/flume-kafka-channel;./run-kafkatest
